# Inazuma-Eleven-Discord-Bot-InaBot-

./: .dockerignore  .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  main.py
InaBot/: Dockerfile  banner.sh  cards.db  database.py  main.py  pyproject.toml
InaBot/banners/: InaBot.sh
InaBot/data/: cards.db
api/: pyproject.toml
api/data/: teams.csv
