[project]
name = "inazumaelevenvr-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "discord-py>=2.7.1",
    "fastapi>=0.133.1",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
]
